change pointwise_path to path_solver

--- a/experiments/notebook.ipynb
+++ b/experiments/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,8 @@
     "import sys\n",
     "sys.path.append('..')\n",
     "# import modules\n",
-    "from modules import pointwise_path, full_path, PD_gap\n",
+    "from modules import path_solver, pointwise_path, full_path, utils\n",
+    "from modules import PD_gap, dual_sorted_L1_norm as dual_norm\n",
     "\n",
     "from slope.solvers import admm, hybrid_cd, newt_alm, oracle_cd, prox_grad"
    ]
@@ -59,18 +60,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 6.000, 4.64e-05s elapsed, gap = 0.00e+00\n",
-      "node 1: gamma = 5.000, 1.68e-04s elapsed, gap = -2.84e-14\n",
-      "node 2: gamma = 3.750, 2.13e-04s elapsed, gap = -2.84e-14\n",
-      "node 3: gamma = 0.417, 2.43e-04s elapsed, gap = -1.42e-14\n",
-      "node 4: gamma = 0.000, 2.70e-04s elapsed, gap = 0.00e+00\n"
+      "node 0: gamma = 6.000, 6.45e-05s elapsed, gap = 0.00e+00\n",
+      "node 1: gamma = 5.000, 2.06e-04s elapsed, gap = -1.42e-14\n",
+      "node 2: gamma = 3.750, 2.50e-04s elapsed, gap = -1.42e-14\n",
+      "node 3: gamma = 0.417, 2.74e-04s elapsed, gap = -1.42e-14\n",
+      "node 4: gamma = 0.000, 2.93e-04s elapsed, gap = 0.00e+00\n"
      ]
     }
    ],
@@ -83,27 +84,128 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.6"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "6/3.75"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# for Numba compilation\n",
-    "_ = pointwise_path(X, y , Lambda, gamma=0., k_max=0., rtol_pattern=1e-6, atol_pattern=1e-6, rtol_gamma=1e-6, split_max=1e1, log=0)\n",
+    "_ = path_solver(X, y , Lambda, k_max=0., rtol_pattern=1e-6, atol_pattern=1e-6, rtol_gamma=1e-6, split_max=1e1, log=0)\n",
     "_ = hybrid_cd(X, y, Lambda, fit_intercept=False, verbose=False, tol=1e-1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "slope-path: 1.52e-04s elapsed\n",
-      "[2.11111111 0.11111111 0.        ]\n",
-      "56.44444444444444 -1.4210854715202004e-14\n"
+      "slope-path: 2.41e-04s elapsed\n",
+      "[5.08 0.   0.  ]\n",
+      "30.242000000000004 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "gamma = dual_norm(X.T@y, Lambda)/3.75\n",
+    "t_start = timer()\n",
+    "sol, (primal, gap) = path_solver(X, y, gamma*Lambda, k_max=1e3, rtol_pattern=1e-6, atol_pattern = 1e-8, rtol_gamma=1e-12, split_max=1e1, log=0)\n",
+    "time = timer() - t_start\n",
+    "print(f'slope-path: {time:.2e}s elapsed') #, gap = {gap:.2e}') #, loss = {primal/X.shape[1]:.2e}')\n",
+    "print(sol)\n",
+    "print(primal/X.shape[0], gap/X.shape[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "slope-cd: 3.74e-04s elapsed\n",
+      "[ 5.08  0.   -0.  ]\n",
+      "30.242000000000004 0.0\n",
+      "30.242000000000004 0.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "t_start = timer()\n",
+    "sol_cd, intercept_cd, primals_cd, gaps_cd, time_cd, n_cluster = hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, verbose=False, tol=1e-13)\n",
+    "time_cd = timer() - t_start\n",
+    "print(f'slope-cd: {time_cd:.2e}s elapsed')\n",
+    "print(sol_cd)\n",
+    "print(primals_cd[-1], gaps_cd[-1])\n",
+    "primal_cd, gap_cd = PD_gap(sol_cd, X, y, gamma*Lambda)\n",
+    "# , gap = {gap_cd:.2e}')\n",
+    "print(primal_cd/X.shape[0], gap_cd/X.shape[0])\n",
+    "# #print(primal, sol)\n",
+    "# print(primals_cd[-1], f'{gaps_cd[-1]:.2e}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "(96.1, -2.842170943040401e-14)\n"
+     ]
+    }
+   ],
+   "source": [
+    "res = y - X@sol_cd\n",
+    "print(dual_norm(X.T@res, gamma*Lambda) <= 1)\n",
+    "\n",
+    "primal_cd - 1/2*(np.linalg.norm(y)**2 - np.linalg.norm(y - res)**2)\n",
+    "print(PD_gap(sol_cd, X, y, gamma*Lambda))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypingError",
+     "evalue": "Failed in nopython mode pipeline (step: Handle with contexts)\nFailed in nopython mode pipeline (step: nopython frontend)\nInternal error at <numba.core.typeinfer.CallConstraint object at 0x169ff1760>.\ntoo many positional arguments\nDuring: resolving callee type: type(CPUDispatcher(<function PD_gap at 0x11eeead30>))\nDuring: typing of call at /Users/xdupuis/Research/slope-path/github/experiments/../modules/solvers.py (154)\n\nEnable logging at debug level for details.\n\nFile \"../modules/solvers.py\", line 154:\ndef pointwise_path(X, y, Lambda, gamma, k_max, rtol_pattern, atol_pattern, rtol_gamma, split_max, log):\n    <source elided>\n            # print('node', k,': running gamma =', run_gamma)\n    return sol, PD_gap(sol, gamma, X, y, Lambda)\n    ^\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypingError\u001b[0m                               Traceback (most recent call last)",
+      "\u001b[1;32m/Users/xdupuis/Research/slope-path/github/experiments/notebook.ipynb Cell 10\u001b[0m line \u001b[0;36m3\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/notebook.ipynb#W6sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m gamma \u001b[39m=\u001b[39m \u001b[39m4.\u001b[39m\u001b[39m# use float\u001b[39;00m\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/notebook.ipynb#W6sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m t_start \u001b[39m=\u001b[39m timer()\n\u001b[0;32m----> <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/notebook.ipynb#W6sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m sol, (primal, gap) \u001b[39m=\u001b[39m pointwise_path(X, y , Lambda, gamma, k_max\u001b[39m=\u001b[39;49m\u001b[39m1e3\u001b[39;49m, rtol_pattern\u001b[39m=\u001b[39;49m\u001b[39m1e-6\u001b[39;49m, atol_pattern \u001b[39m=\u001b[39;49m \u001b[39m1e-8\u001b[39;49m, rtol_gamma\u001b[39m=\u001b[39;49m\u001b[39m1e-12\u001b[39;49m, split_max\u001b[39m=\u001b[39;49m\u001b[39m1e1\u001b[39;49m, log\u001b[39m=\u001b[39;49m\u001b[39m0\u001b[39;49m)\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/notebook.ipynb#W6sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m time \u001b[39m=\u001b[39m timer() \u001b[39m-\u001b[39m t_start\n\u001b[1;32m      <a href='vscode-notebook-cell:/Users/xdupuis/Research/slope-path/github/experiments/notebook.ipynb#W6sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mslope-path: \u001b[39m\u001b[39m{\u001b[39;00mtime\u001b[39m:\u001b[39;00m\u001b[39m.2e\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39ms elapsed\u001b[39m\u001b[39m'\u001b[39m) \u001b[39m#, gap = {gap:.2e}') #, loss = {primal/X.shape[1]:.2e}')\u001b[39;00m\n",
+      "File \u001b[0;32m~/miniconda3/envs/slopecd/lib/python3.9/site-packages/numba/core/dispatcher.py:468\u001b[0m, in \u001b[0;36m_DispatcherBase._compile_for_args\u001b[0;34m(self, *args, **kws)\u001b[0m\n\u001b[1;32m    464\u001b[0m         msg \u001b[39m=\u001b[39m (\u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m{\u001b[39;00m\u001b[39mstr\u001b[39m(e)\u001b[39m.\u001b[39mrstrip()\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39mThis error may have been caused \u001b[39m\u001b[39m\"\u001b[39m\n\u001b[1;32m    465\u001b[0m                \u001b[39mf\u001b[39m\u001b[39m\"\u001b[39m\u001b[39mby the following argument(s):\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m{\u001b[39;00margs_str\u001b[39m}\u001b[39;00m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    466\u001b[0m         e\u001b[39m.\u001b[39mpatch_message(msg)\n\u001b[0;32m--> 468\u001b[0m     error_rewrite(e, \u001b[39m'\u001b[39;49m\u001b[39mtyping\u001b[39;49m\u001b[39m'\u001b[39;49m)\n\u001b[1;32m    469\u001b[0m \u001b[39mexcept\u001b[39;00m errors\u001b[39m.\u001b[39mUnsupportedError \u001b[39mas\u001b[39;00m e:\n\u001b[1;32m    470\u001b[0m     \u001b[39m# Something unsupported is present in the user code, add help info\u001b[39;00m\n\u001b[1;32m    471\u001b[0m     error_rewrite(e, \u001b[39m'\u001b[39m\u001b[39munsupported_error\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "File \u001b[0;32m~/miniconda3/envs/slopecd/lib/python3.9/site-packages/numba/core/dispatcher.py:409\u001b[0m, in \u001b[0;36m_DispatcherBase._compile_for_args.<locals>.error_rewrite\u001b[0;34m(e, issue_type)\u001b[0m\n\u001b[1;32m    407\u001b[0m     \u001b[39mraise\u001b[39;00m e\n\u001b[1;32m    408\u001b[0m \u001b[39melse\u001b[39;00m:\n\u001b[0;32m--> 409\u001b[0m     \u001b[39mraise\u001b[39;00m e\u001b[39m.\u001b[39mwith_traceback(\u001b[39mNone\u001b[39;00m)\n",
+      "\u001b[0;31mTypingError\u001b[0m: Failed in nopython mode pipeline (step: Handle with contexts)\nFailed in nopython mode pipeline (step: nopython frontend)\nInternal error at <numba.core.typeinfer.CallConstraint object at 0x169ff1760>.\ntoo many positional arguments\nDuring: resolving callee type: type(CPUDispatcher(<function PD_gap at 0x11eeead30>))\nDuring: typing of call at /Users/xdupuis/Research/slope-path/github/experiments/../modules/solvers.py (154)\n\nEnable logging at debug level for details.\n\nFile \"../modules/solvers.py\", line 154:\ndef pointwise_path(X, y, Lambda, gamma, k_max, rtol_pattern, atol_pattern, rtol_gamma, split_max, log):\n    <source elided>\n            # print('node', k,': running gamma =', run_gamma)\n    return sol, PD_gap(sol, gamma, X, y, Lambda)\n    ^\n"
      ]
     }
    ],
@@ -119,38 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "slope-cd: 2.86e-03s elapsed\n",
-      "[2.11111111 0.11111111 0.        ]\n",
-      "56.44444444444444 2.1316282072803006e-14\n",
-      "56.44444444444444 1.4210854715202004e-14\n"
-     ]
-    }
-   ],
-   "source": [
-    "# gamma = 0.5\n",
-    "t_start = timer()\n",
-    "sol_cd, intercept_cd, primals_cd, gaps_cd, time_cd, n_cluster = hybrid_cd(X, y, gamma/X.shape[0]*Lambda, fit_intercept=False, verbose=False, tol=1e-13)\n",
-    "time_cd = timer() - t_start\n",
-    "print(f'slope-cd: {time_cd:.2e}s elapsed')\n",
-    "print(sol_cd)\n",
-    "print(primals_cd[-1], gaps_cd[-1])\n",
-    "primal_cd, gap_cd = PD_gap(sol_cd, gamma, X, y, Lambda)\n",
-    "# , gap = {gap_cd:.2e}')\n",
-    "print(primal_cd/X.shape[0], gap_cd/X.shape[0])\n",
-    "# #print(primal, sol)\n",
-    "# print(primals_cd[-1], f'{gaps_cd[-1]:.2e}')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
