add script with toy example

--- a/experiments/full_paths/toy_example.ipynb
+++ b/experiments/full_paths/toy_example.ipynb
@@ -39,7 +39,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# for Numba compilation\n",
+    "# Numba compilation\n",
     "_ = full_path(X, y , Lambda, ratio=0., k_max=0., rtol_pattern=1e-6, atol_pattern = 1e-6, rtol_gamma=1e-6, split_max=1e1, log=0)\n",
     "_ = path_solver(X, y, Lambda, k_max=0., rtol_pattern=1e-6, atol_pattern = 1e-6, rtol_gamma=1e-6, split_max=1e1, log=0)"
    ]
@@ -95,25 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 6.000, 1.78e-05s elapsed, gap = 0.00e+00\n",
-      "node 1: gamma = 5.000, 9.42e-05s elapsed, gap = -4.26e-14\n",
-      "node 2: gamma = 3.749, 1.28e-04s elapsed, gap = -1.42e-14\n",
-      "node 3: gamma = 0.417, 1.54e-04s elapsed, gap = -7.11e-15\n",
-      "node 4: gamma = 0.001, 1.81e-04s elapsed, gap = -4.35e-14\n",
-      "node 5: gamma = 0.000, 2.05e-04s elapsed, gap = -2.06e-14\n",
-      "node 6: gamma = 0.000, 2.33e-04s elapsed, gap = -1.61e-14\n",
-      "node 7: gamma = 0.000, 2.55e-04s elapsed, gap = -5.46e-14\n",
+      "node 0: gamma = 6.000, 1.60e-05s elapsed, gap = 0.00e+00\n",
+      "node 1: gamma = 5.000, 8.72e-05s elapsed, gap = -4.26e-14\n",
+      "node 2: gamma = 3.749, 1.15e-04s elapsed, gap = -1.42e-14\n",
+      "node 3: gamma = 0.417, 1.34e-04s elapsed, gap = -7.11e-15\n",
+      "node 4: gamma = 0.001, 1.53e-04s elapsed, gap = -4.35e-14\n",
+      "node 5: gamma = 0.000, 1.70e-04s elapsed, gap = -2.06e-14\n",
+      "node 6: gamma = 0.000, 1.90e-04s elapsed, gap = -1.61e-14\n",
+      "node 7: gamma = 0.000, 2.06e-04s elapsed, gap = -5.46e-14\n",
       "\n",
-      "with no ridge regularization: Gamma = [6.         5.         3.75       0.41666667 0.        ]\n",
+      "with no ridge regularization: nodes = [6.         5.         3.75       0.41666667 0.        ]\n",
       "\n",
-      "with ridge regularization: Gamma = [6.00000000e+00 5.00000000e+00 3.74949990e+00 4.16558335e-01\n",
+      "with ridge regularization: nodes = [6.00000000e+00 5.00000000e+00 3.74949990e+00 4.16558335e-01\n",
       " 6.99884027e-04 2.50350498e-07 5.00020005e-08 0.00000000e+00]\n"
      ]
     }
@@ -122,8 +122,8 @@
     "# Full path with ridge regularization\n",
     "eps = np.sqrt(2e-4)\n",
     "Gamma2, Sol2, Primal2, Gap2, M2, Split2, T2 = full_path(np.concatenate((X, eps*np.eye(X.shape[-1]))), np.concatenate((y, np.zeros(X.shape[-1]))) , Lambda, ratio=1., k_max=1e3, rtol_pattern=1e-6, atol_pattern = 1e-8, rtol_gamma=1e-12, split_max=1e1, log=1)\n",
-    "print(f'\\nwith no ridge regularization: Gamma = {np.array(Gamma)}\\n')\n",
-    "print(f'with ridge regularization: Gamma = {np.array(Gamma2)}')\n"
+    "print(f'\\nwith no ridge regularization: nodes = {np.array(Gamma)}\\n')\n",
+    "print(f'with ridge regularization: nodes = {np.array(Gamma2)}')\n"
    ]
   },
   {
