change tol parameters for toy example

--- a/experiments/full_paths/toy_example.ipynb
+++ b/experiments/full_paths/toy_example.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,29 +46,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 6.000, 1.83e-05s elapsed, gap = 0.00e+00\n",
-      "node 1: gamma = 5.000, 8.95e-05s elapsed, gap = -1.42e-14\n",
-      "node 2: gamma = 3.750, 1.21e-04s elapsed, gap = -1.42e-14\n",
-      "node 3: gamma = 0.417, 1.46e-04s elapsed, gap = -1.42e-14\n",
-      "node 4: gamma = 0.000, 1.66e-04s elapsed, gap = 0.00e+00\n"
+      "node 0: gamma = 6.000, elapsed time = 1.74e-05s, gap = 0.00e+00\n",
+      "node 1: gamma = 5.000, elapsed time = 9.32e-05s, gap = -1.42e-14\n",
+      "node 2: gamma = 3.750, elapsed time = 1.21e-04s, gap = -1.42e-14\n",
+      "node 3: gamma = 0.417, elapsed time = 1.43e-04s, gap = -1.42e-14\n",
+      "node 4: gamma = 0.000, elapsed time = 1.62e-04s, gap = 0.00e+00\n"
      ]
     }
    ],
    "source": [
     "# Full path\n",
-    "Gamma, Sol, Primal, Gap, M, Split, T = full_path(X, y , Lambda, ratio=1., k_max=1e3, rtol_pattern=1e-6, atol_pattern = 1e-8, rtol_gamma=1e-12, split_max=1e1, log=1)"
+    "Gamma, Sol, Primal, Gap, M, Split, T = full_path(X, y , Lambda, ratio=1., k_max=1e3, rtol_pattern=1e-8, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -95,21 +95,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 6.000, 1.60e-05s elapsed, gap = 0.00e+00\n",
-      "node 1: gamma = 5.000, 8.72e-05s elapsed, gap = -4.26e-14\n",
-      "node 2: gamma = 3.749, 1.15e-04s elapsed, gap = -1.42e-14\n",
-      "node 3: gamma = 0.417, 1.34e-04s elapsed, gap = -7.11e-15\n",
-      "node 4: gamma = 0.001, 1.53e-04s elapsed, gap = -4.35e-14\n",
-      "node 5: gamma = 0.000, 1.70e-04s elapsed, gap = -2.06e-14\n",
-      "node 6: gamma = 0.000, 1.90e-04s elapsed, gap = -1.61e-14\n",
-      "node 7: gamma = 0.000, 2.06e-04s elapsed, gap = -5.46e-14\n",
+      "node 0: gamma = 6.000, elapsed time = 1.70e-05s, gap = 0.00e+00\n",
+      "node 1: gamma = 5.000, elapsed time = 9.87e-05s, gap = -4.26e-14\n",
+      "node 2: gamma = 3.749, elapsed time = 1.27e-04s, gap = -1.42e-14\n",
+      "node 3: gamma = 0.417, elapsed time = 1.49e-04s, gap = -7.11e-15\n",
+      "node 4: gamma = 0.001, elapsed time = 1.72e-04s, gap = -4.35e-14\n",
+      "node 5: gamma = 0.000, elapsed time = 1.92e-04s, gap = -2.06e-14\n",
+      "node 6: gamma = 0.000, elapsed time = 2.16e-04s, gap = -1.61e-14\n",
+      "node 7: gamma = 0.000, elapsed time = 2.36e-04s, gap = -5.46e-14\n",
       "\n",
       "with no ridge regularization: nodes = [6.         5.         3.75       0.41666667 0.        ]\n",
       "\n",
@@ -121,14 +121,14 @@
    "source": [
     "# Full path with ridge regularization\n",
     "eps = np.sqrt(2e-4)\n",
-    "Gamma2, Sol2, Primal2, Gap2, M2, Split2, T2 = full_path(np.concatenate((X, eps*np.eye(X.shape[-1]))), np.concatenate((y, np.zeros(X.shape[-1]))) , Lambda, ratio=1., k_max=1e3, rtol_pattern=1e-6, atol_pattern = 1e-8, rtol_gamma=1e-12, split_max=1e1, log=1)\n",
+    "Gamma2, Sol2, Primal2, Gap2, M2, Split2, T2 = full_path(np.concatenate((X, eps*np.eye(X.shape[-1]))), np.concatenate((y, np.zeros(X.shape[-1]))) , Lambda, ratio=1., k_max=1e3, rtol_pattern=1e-8, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=1)\n",
     "print(f'\\nwith no ridge regularization: nodes = {np.array(Gamma)}\\n')\n",
     "print(f'with ridge regularization: nodes = {np.array(Gamma2)}')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -142,7 +142,7 @@
    "source": [
     "# Solver \n",
     "gamma = 3.\n",
-    "sol, (primal, gap) = path_solver(X, y , gamma*Lambda, k_max=1e3, rtol_pattern=1e-6, atol_pattern = 1e-8, rtol_gamma=1e-12, split_max=1e1, log=0)\n",
+    "sol, (primal, gap) = path_solver(X, y , gamma*Lambda, k_max=1e3, rtol_pattern=1e-8, atol_pattern = 1e-10, rtol_gamma=1e-10, split_max=1e1, log=0)\n",
     "print(f'solution for gamma = {gamma}: {sol}')"
    ]
   },
