change title of the absolute solution path

--- a/experiments/full_paths/wine_quality.ipynb
+++ b/experiments/full_paths/wine_quality.ipynb
@@ -165,7 +165,7 @@
     "ax.axhline(0, color='k', linestyle=':', xmax=0.95)\n",
     "ax.plot(0, [np.abs(ols)], 'rx')\n",
     "# ax.set_xscale('symlog')\n",
-    "ax.set_title('Solution path')\n",
+    "ax.set_title('Absolute solution path')\n",
     "plt.show() "
    ]
   },
