--- a/experiments/full_paths/genlasso_experiments.Rmd
+++ b/experiments/full_paths/genlasso_experiments.Rmd
@@ -1,11 +1,17 @@
 ---
-title: "Solving the solution path of OSCAR with \"genlasso\""
+title: "OSCAR solution path with the package 'genlasso'"
 output:
   pdf_document: default
   html_document: default
 ---
 
-# Solution path of OSCAR described in Example 4
+We use the package genlasso to compute the solution path of OSCAR: <https://cran.r-project.org/web/packages/genlasso/index.html>
+
+```{r}
+library(genlasso)
+```
+
+# Toy example (example 4)
 
 The matrix $X\in \mathbb{R}^{2\times 3}$ and the vector $y\in \mathbb{R}^2$ given in Example 4 are reported hereafter:
 
@@ -29,26 +35,23 @@ D[8,]=c(0,1,1)
 D[9,]=c(0,1,-1)
 ```
 
-We use the package genlasso to solve the solution path of OSCAR
-
 ```{r}
-library(genlasso)
 Sol = genlasso(y,X,D,approx=FALSE)
-kinks = Sol$lambda
+nodes = Sol$lambda
 beta = Sol$beta
-plot(kinks,beta[1,],type="l",xlim=c(0,7),ylim=c(-2,10))
-lines(kinks,beta[2,],col=2)
+plot(nodes,beta[1,],type="l",xlim=c(0,7),ylim=c(-2,10))
+lines(nodes,beta[2,],col=2)
 ```
 
 ### Some comments on the solution path provided by this package:
 
-Actually $6$ and $5$ are true kinks of the OSCAR solution path but other kinks $8.75, 7.92, 6.87, 6.75, 6.42, 6.17, 0.0001$ are not relevant. Moreover some true kinks are missing: $3.75, 0.42,\dots$.
+Actually $6$ and $5$ are true nodes of the OSCAR solution path but other nodes $8.75, 7.92, 6.87, 6.75, 6.42, 6.17, 0.0001$ are not relevant. Moreover some true nodes are missing: $3.75, 0.42,\dots$.
 
 The solution of OSCAR at $\gamma \in \{ 8.75, 7.92, 6.87, 6.75, 6.42, 6.17, 6, 5\}$ are correct but wrong when $0.0001$.
 
 Overall, the solution path of OSCAR is correct when $\gamma \ge 5$ but wrong when $\gamma <5$.
 
-# Solution path of OSCAR applied on the red Vinho Verde wines data set
+# 'Wine Quality' data set
 
 The data set can be downloaded from <http://archive.ics.uci.edu/ml/datasets/Wine+Quality>. Hereafter we standardize these data.
 
@@ -96,16 +99,16 @@ cat("The running time is:",  t_out - t_in, "\n")
 
 # Graphical illustration
 ols = solve(t(X)%*%X,t(X)%*%y)
-kinks = Sol$lambda
+nodes = Sol$lambda
 beta = Sol$beta
 finished = Sol$completepath
 cat("Does genelasso compute entirely the path?",  finished, "\n" )
-cat("Smallest kink:",min(kinks), "\n")
-plot(kinks,beta[1,],type="l",xlim=c(0,160),ylim=c(-0.3,0.3))
+cat("Smallest node:",min(nodes), "\n")
+plot(nodes,beta[1,],type="l",xlim=c(0,160),ylim=c(-0.3,0.3))
 points(0,ols[1])
 for (i in (2:11))
 {
-lines(kinks,beta[i,],col=i)
+lines(nodes,beta[i,],col=i)
 points(0,ols[i],col=i)
 }
 
@@ -115,12 +118,12 @@ gamma_max= 153.671
 gamma1=gamma_max/2
 gamma2=gamma_max/10
 
-alpha1 = (gamma1-kinks[60])/(kinks[59]-kinks[60])
+alpha1 = (gamma1-nodes[60])/(nodes[59]-nodes[60])
 beta1 = beta[,59]*alpha1+(1-alpha1)*beta[,60]
 min1 =  0.5*sum((y-X%*%beta1)^2)+gamma1*sum(abs(D%*%beta1))
 cat("Minimum at J*(X'y)/2:",min1 ,"\n")
 
-alpha2 = (gamma2-kinks[114])/(kinks[113]-kinks[114])
+alpha2 = (gamma2-nodes[114])/(nodes[113]-nodes[114])
 beta2 = beta[,113]*alpha2+(1-alpha2)*beta[,114]
 min2 =  0.5*sum((y-X%*%beta2)^2)+gamma2*sum(abs(D%*%beta2))
 cat("Minimum at J*(X'y)/10:",min2 , "\n")
@@ -128,4 +131,4 @@ cat("Minimum at J*(X'y)/10:",min2 , "\n")
 
 ### Some comments on the solution path provided by this package:
 
-Actually $\gamma = 7.40$ is not the smallest kink of OSCAR solution path; there are 7 kinks smaller than $7.40$ (the smallest kink is $0.26$). Surprisingly, despite genlasso does not solve entirely the solution path, this algorithm claims that the path is entirely computed.
+Actually $\gamma = 7.40$ is not the smallest node of OSCAR solution path; there are 7 nodes smaller than $7.40$ (the smallest node is $0.26$). Surprisingly, despite genlasso does not solve entirely the solution path, this algorithm claims that the path is entirely computed.
