change mode to 'a' in to_csv

--- a/experiments/solvers_benchmark/wine-quality_benchmark.ipynb
+++ b/experiments/solvers_benchmark/wine-quality_benchmark.ipynb
@@ -207,7 +207,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "benchmark.to_csv('wine-quality_benchmark.csv', float_format='{:.2e}'.format)"
+    "benchmark.to_csv('wine-quality_benchmark.csv', float_format='{:.2e}'.format, mode='a')"
    ]
   },
   {
@@ -216,7 +216,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(benchmark.to_latex(float_format='{:.2e}'.format))"
+    "with open('wine-quality_benchmark.txt', 'a') as f:\n",
+    "                f.write(benchmark.to_latex(float_format='{:.2e}'.format))\n",
+    "# print(benchmark.to_latex(float_format='{:.2e}'.format))"
    ]
   }
  ],
