run benchmark for wine quality

--- a/experiments/solvers_benchmark/wine-quality_benchmark.ipynb
+++ b/experiments/solvers_benchmark/wine-quality_benchmark.ipynb
@@ -175,7 +175,81 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>gamma / gamma_max</th>\n",
+       "      <th>0.5</th>\n",
+       "      <th>0.1</th>\n",
+       "      <th>0.02</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>FISTA</th>\n",
+       "      <td>1.14e-02</td>\n",
+       "      <td>2.19e-02</td>\n",
+       "      <td>2.91e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Anderson PGD</th>\n",
+       "      <td>4.43e-03</td>\n",
+       "      <td>3.06e-02</td>\n",
+       "      <td>1.57e-02</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ADMM (rho=100)</th>\n",
+       "      <td>1.92e-02</td>\n",
+       "      <td>4.24e-03</td>\n",
+       "      <td>1.60e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>hybrid CD</th>\n",
+       "      <td>2.34e-03</td>\n",
+       "      <td>6.61e-03</td>\n",
+       "      <td>4.75e-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>path (our)</th>\n",
+       "      <td>7.78e-04</td>\n",
+       "      <td>5.43e-03</td>\n",
+       "      <td>6.03e-03</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "gamma / gamma_max      0.5      0.1     0.02\n",
+       "FISTA             1.14e-02 2.19e-02 2.91e-02\n",
+       "Anderson PGD      4.43e-03 3.06e-02 1.57e-02\n",
+       "ADMM (rho=100)    1.92e-02 4.24e-03 1.60e-03\n",
+       "hybrid CD         2.34e-03 6.61e-03 4.75e-03\n",
+       "path (our)        7.78e-04 5.43e-03 6.03e-03"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# Benchmark\n",
     "nb_loops = 1000; nb_runs = 7 # nb_loops = 1000\n",
@@ -203,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,13 +286,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('wine-quality_benchmark.txt', 'a') as f:\n",
-    "                f.write(benchmark.to_latex(float_format='{:.2e}'.format))\n",
-    "# print(benchmark.to_latex(float_format='{:.2e}'.format))"
+    "                f.write(benchmark.to_latex(float_format='{:.2e}'.format))"
    ]
   }
  ],
