--- a/experiments/solvers_benchmarks/wine-quality_benchmark.ipynb
+++ b/experiments/solvers_benchmarks/wine-quality_benchmark.ipynb
@@ -281,7 +281,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "benchmark.to_csv('wine-quality_benchmark.csv', float_format='{:.2e}'.format, mode='a')"
+    "benchmark.to_csv('../results/wine-quality_benchmark.csv', float_format='{:.2e}'.format, mode='a')"
    ]
   },
   {
@@ -290,7 +290,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('wine-quality_benchmark.txt', 'a') as f:\n",
+    "with open('../results/wine-quality_benchmark.txt', 'a') as f:\n",
     "                f.write(benchmark.to_latex(float_format='{:.2e}'.format))"
    ]
   }
