add savefig of the path for wine quality

--- a/experiments/full_paths/wine-quality.ipynb
+++ b/experiments/full_paths/wine-quality.ipynb
@@ -70,63 +70,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "node 0: gamma = 898.291, elapsed time = 4.50e-04s, gap = 0.00e+00\n",
-      "node 1: gamma = 850.633, elapsed time = 1.64e-03s, gap = 4.55e-13\n",
-      "node 2: gamma = 834.176, elapsed time = 1.93e-03s, gap = 4.55e-13\n",
-      "node 3: gamma = 518.014, elapsed time = 2.32e-03s, gap = 3.98e-13\n",
-      "node 4: gamma = 503.663, elapsed time = 2.61e-03s, gap = 3.98e-13\n",
-      "node 5: gamma = 490.715, elapsed time = 2.91e-03s, gap = 5.12e-13\n",
-      "node 6: gamma = 393.072, elapsed time = 3.16e-03s, gap = 6.25e-13\n",
-      "node 7: gamma = 342.330, elapsed time = 3.54e-03s, gap = 7.39e-13\n",
-      "node 8: gamma = 331.802, elapsed time = 3.90e-03s, gap = 8.53e-13\n",
-      "node 9: gamma = 321.273, elapsed time = 4.18e-03s, gap = 7.96e-13\n",
-      "node 10: gamma = 269.699, elapsed time = 4.52e-03s, gap = 1.71e-13\n",
-      "node 11: gamma = 253.852, elapsed time = 4.81e-03s, gap = 8.53e-13\n",
-      "node 12: gamma = 241.336, elapsed time = 5.18e-03s, gap = 1.14e-13\n",
-      "node 13: gamma = 193.852, elapsed time = 5.54e-03s, gap = 2.27e-13\n",
-      "node 14: gamma = 184.583, elapsed time = 5.92e-03s, gap = 2.27e-13\n",
-      "node 15: gamma = 164.497, elapsed time = 6.31e-03s, gap = 2.27e-13\n",
-      "node 16: gamma = 144.624, elapsed time = 6.63e-03s, gap = 3.98e-13\n",
-      "node 17: gamma = 143.223, elapsed time = 7.02e-03s, gap = 5.68e-13\n",
-      "node 18: gamma = 137.079, elapsed time = 7.48e-03s, gap = 4.55e-13\n",
-      "node 19: gamma = 136.620, elapsed time = 7.80e-03s, gap = 4.55e-13\n",
-      "node 20: gamma = 132.797, elapsed time = 8.36e-03s, gap = 3.41e-13\n",
-      "node 21: gamma = 131.668, elapsed time = 8.79e-03s, gap = 6.25e-13\n",
-      "node 22: gamma = 126.725, elapsed time = 9.12e-03s, gap = 4.55e-13\n",
-      "node 23: gamma = 121.627, elapsed time = 9.47e-03s, gap = 5.68e-13\n",
-      "node 24: gamma = 119.728, elapsed time = 9.93e-03s, gap = 5.68e-13\n",
-      "node 25: gamma = 109.581, elapsed time = 1.03e-02s, gap = 2.84e-13\n",
-      "node 26: gamma = 107.880, elapsed time = 1.06e-02s, gap = 3.41e-13\n",
-      "node 27: gamma = 87.120, elapsed time = 1.09e-02s, gap = 6.25e-13\n",
-      "node 28: gamma = 84.077, elapsed time = 1.12e-02s, gap = 5.68e-13\n",
-      "node 29: gamma = 72.251, elapsed time = 1.15e-02s, gap = 5.12e-13\n",
-      "node 30: gamma = 62.681, elapsed time = 1.17e-02s, gap = 6.25e-13\n",
-      "node 31: gamma = 55.356, elapsed time = 1.21e-02s, gap = 4.55e-13\n",
-      "node 32: gamma = 55.152, elapsed time = 1.25e-02s, gap = 5.68e-13\n",
-      "node 33: gamma = 54.888, elapsed time = 1.30e-02s, gap = 3.98e-13\n",
-      "node 34: gamma = 50.924, elapsed time = 1.34e-02s, gap = 3.98e-13\n",
-      "node 35: gamma = 50.688, elapsed time = 1.38e-02s, gap = 4.55e-13\n",
-      "node 36: gamma = 39.172, elapsed time = 1.48e-02s, gap = 6.82e-13\n",
-      "node 37: gamma = 22.413, elapsed time = 1.52e-02s, gap = 3.41e-13\n",
-      "node 38: gamma = 19.965, elapsed time = 1.60e-02s, gap = 6.25e-13\n",
-      "node 39: gamma = 18.629, elapsed time = 1.66e-02s, gap = 6.25e-13\n",
-      "node 40: gamma = 16.974, elapsed time = 1.70e-02s, gap = 5.12e-13\n",
-      "node 41: gamma = 11.477, elapsed time = 1.73e-02s, gap = 3.41e-13\n",
-      "node 42: gamma = 11.243, elapsed time = 1.76e-02s, gap = 4.55e-13\n",
-      "node 43: gamma = 9.739, elapsed time = 1.79e-02s, gap = 6.82e-13\n",
-      "node 44: gamma = 9.268, elapsed time = 1.82e-02s, gap = 4.55e-13\n",
-      "node 45: gamma = 2.773, elapsed time = 1.86e-02s, gap = 7.96e-13\n",
-      "node 46: gamma = 2.479, elapsed time = 1.91e-02s, gap = 5.12e-13\n",
-      "node 47: gamma = 0.943, elapsed time = 1.95e-02s, gap = 5.68e-13\n",
-      "node 48: gamma = 0.916, elapsed time = 1.99e-02s, gap = 5.68e-13\n",
-      "node 49: gamma = 0.000, elapsed time = 2.02e-02s, gap = 2.84e-13\n"
+      "node 0: gamma = 898.291, elapsed time = 9.51e-05s, gap = 0.00e+00\n",
+      "node 1: gamma = 850.633, elapsed time = 5.26e-03s, gap = 4.55e-13\n",
+      "node 2: gamma = 834.176, elapsed time = 7.22e-03s, gap = 4.55e-13\n",
+      "node 3: gamma = 518.014, elapsed time = 7.92e-03s, gap = 3.98e-13\n",
+      "node 4: gamma = 503.663, elapsed time = 8.41e-03s, gap = 3.98e-13\n",
+      "node 5: gamma = 490.715, elapsed time = 8.95e-03s, gap = 5.12e-13\n",
+      "node 6: gamma = 393.072, elapsed time = 9.42e-03s, gap = 6.25e-13\n",
+      "node 7: gamma = 342.330, elapsed time = 9.72e-03s, gap = 7.39e-13\n",
+      "node 8: gamma = 331.802, elapsed time = 1.00e-02s, gap = 8.53e-13\n",
+      "node 9: gamma = 321.273, elapsed time = 1.04e-02s, gap = 7.96e-13\n",
+      "node 10: gamma = 269.699, elapsed time = 1.07e-02s, gap = 1.71e-13\n",
+      "node 11: gamma = 253.852, elapsed time = 1.10e-02s, gap = 8.53e-13\n",
+      "node 12: gamma = 241.336, elapsed time = 1.14e-02s, gap = 1.14e-13\n",
+      "node 13: gamma = 193.852, elapsed time = 1.18e-02s, gap = 2.27e-13\n",
+      "node 14: gamma = 184.583, elapsed time = 1.22e-02s, gap = 2.27e-13\n",
+      "node 15: gamma = 164.497, elapsed time = 1.26e-02s, gap = 2.27e-13\n",
+      "node 16: gamma = 144.624, elapsed time = 1.30e-02s, gap = 3.98e-13\n",
+      "node 17: gamma = 143.223, elapsed time = 1.35e-02s, gap = 5.68e-13\n",
+      "node 18: gamma = 137.079, elapsed time = 1.40e-02s, gap = 4.55e-13\n",
+      "node 19: gamma = 136.620, elapsed time = 1.45e-02s, gap = 4.55e-13\n",
+      "node 20: gamma = 132.797, elapsed time = 1.48e-02s, gap = 3.41e-13\n",
+      "node 21: gamma = 131.668, elapsed time = 1.53e-02s, gap = 6.25e-13\n",
+      "node 22: gamma = 126.725, elapsed time = 1.58e-02s, gap = 4.55e-13\n",
+      "node 23: gamma = 121.627, elapsed time = 1.63e-02s, gap = 5.68e-13\n",
+      "node 24: gamma = 119.728, elapsed time = 1.66e-02s, gap = 5.68e-13\n",
+      "node 25: gamma = 109.581, elapsed time = 1.70e-02s, gap = 2.84e-13\n",
+      "node 26: gamma = 107.880, elapsed time = 1.73e-02s, gap = 3.41e-13\n",
+      "node 27: gamma = 87.120, elapsed time = 1.77e-02s, gap = 6.25e-13\n",
+      "node 28: gamma = 84.077, elapsed time = 1.80e-02s, gap = 5.68e-13\n",
+      "node 29: gamma = 72.251, elapsed time = 1.84e-02s, gap = 5.12e-13\n",
+      "node 30: gamma = 62.681, elapsed time = 1.87e-02s, gap = 6.25e-13\n",
+      "node 31: gamma = 55.356, elapsed time = 1.91e-02s, gap = 4.55e-13\n",
+      "node 32: gamma = 55.152, elapsed time = 1.94e-02s, gap = 5.68e-13\n",
+      "node 33: gamma = 54.888, elapsed time = 1.97e-02s, gap = 3.98e-13\n",
+      "node 34: gamma = 50.924, elapsed time = 2.00e-02s, gap = 3.98e-13\n",
+      "node 35: gamma = 50.688, elapsed time = 2.02e-02s, gap = 4.55e-13\n",
+      "node 36: gamma = 39.172, elapsed time = 2.05e-02s, gap = 6.82e-13\n",
+      "node 37: gamma = 22.413, elapsed time = 2.09e-02s, gap = 3.41e-13\n",
+      "node 38: gamma = 19.965, elapsed time = 2.12e-02s, gap = 6.25e-13\n",
+      "node 39: gamma = 18.629, elapsed time = 2.14e-02s, gap = 6.25e-13\n",
+      "node 40: gamma = 16.974, elapsed time = 2.18e-02s, gap = 5.12e-13\n",
+      "node 41: gamma = 11.477, elapsed time = 2.21e-02s, gap = 3.41e-13\n",
+      "node 42: gamma = 11.243, elapsed time = 2.24e-02s, gap = 4.55e-13\n",
+      "node 43: gamma = 9.739, elapsed time = 2.27e-02s, gap = 6.82e-13\n",
+      "node 44: gamma = 9.268, elapsed time = 2.31e-02s, gap = 4.55e-13\n",
+      "node 45: gamma = 2.773, elapsed time = 2.35e-02s, gap = 7.96e-13\n",
+      "node 46: gamma = 2.479, elapsed time = 2.38e-02s, gap = 5.12e-13\n",
+      "node 47: gamma = 0.943, elapsed time = 2.41e-02s, gap = 5.68e-13\n",
+      "node 48: gamma = 0.916, elapsed time = 2.44e-02s, gap = 5.68e-13\n",
+      "node 49: gamma = 0.000, elapsed time = 2.48e-02s, gap = 2.84e-13\n"
      ]
     }
    ],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -171,7 +171,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig('../results/wine-quality_path', bbox_inches=\"tight\", pad_inches=0.05)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +188,7 @@
      "output_type": "stream",
      "text": [
       "pattern for 0.5 x gamma_max: [ 1 -4  3  0 -2  0 -3 -3  0  4  4]\n",
-      "elapsed time = 9.71e-04s, crossed nodes = 6, primal-dual gap = 8.53e-13\n"
+      "elapsed time = 1.95e-03s, crossed nodes = 6, primal-dual gap = 8.53e-13\n"
      ]
     }
    ],
